Changed input text boxes to text areas and updated the edit feature.

--- a/quora/views/delete.erb
+++ b/quora/views/delete.erb
@@ -5,15 +5,22 @@
 
 <!-- #Add another question -->
 
+
+<a href="/questions/new"><button>New question</button></a> <br/></br>
+<!-- 
 <form  method="GET" action="/questions/new">
   <input type="submit" value="New Question">
-</form> 
+</form>  -->
+
+
+
 
 <!-- View all questions -->
-<form  method="POST" action="/questions">
+
+<a href="/questions"><button>All questions</button></a>
+<!-- <form  method="GET" action="/questions">
 <input type="submit" value="View all questions">
-
-
+</form>  -->
 
 
 
