--- a/quora/views/new.erb
+++ b/quora/views/new.erb
@@ -8,7 +8,10 @@
   <input method= "" type="text" name="title" ><br><br>
 
   Question:<br>
-  <input method= "" type="text" name="description" ><br><br>
+
+  <textarea method= "" type="text" name="description"> </textarea> <br/><br/>
+<!-- 
+  <input method= "" type="text" name="description" ><br><br> -->
 
   <input type="submit" value="Submit">
 
