--- a/quora/views/edit.erb
+++ b/quora/views/edit.erb
@@ -36,10 +36,12 @@
 <h2> New Question</h2>
 
   Title:<br>
-  <input method= "" type="text" name="title" ><br><br>
+  <input method= "" type="text" name="title" value ="<%= @question.title %>" ><br><br>
 
   Question:<br>
-  <input method= "" type="text" name="description" ><br><br>
+  <textarea method= "" type="text" name="description"> <%= @question.description %>
+    
+  </textarea><br><br>
 
   <input type="submit" value="Submit">
 
