Updated database schema to iclude users, questions, answers tables. And added a sign up box to home page.

--- a/quora/views/home.erb
+++ b/quora/views/home.erb
@@ -10,7 +10,21 @@
 
   <body>
 
-    <h1>Quora Clone</h1>
+  <h1>Quora Clone</h1>
+
+    <form  method="POST" action="/submit">
+      <table style="width:45%">
+        <tr>
+          <td>Username <input type="text" name="username"></td>
+          <td>  Password <input type="text" name="password"> </td>
+        </tr>
+
+      </table>
+    </form>
+
+
+
+  
     <table>
     <tr>
       <td> <a href="http://localhost:9393/questions"> View all Questions </a> </td>
