Organized project files, added a questions viewer folder, and an answers controller file.

--- a/quora/views/home.erb
+++ b/quora/views/home.erb
@@ -7,7 +7,6 @@
 
   </head>
 
-
   <body>
 
   <h1>Quora Clone</h1>
@@ -17,8 +16,8 @@
         <tr>
           <td>Username <input type="text" name="username"></td>
           <td>  Password <input type="text" name="password"> </td>
+          <td><input type="submit" value="Submit"></td>
         </tr>
-
       </table>
     </form>
 
