Updated Quora to include answers for every question. User can add, and delete ananswers.

--- a/quora/views/questions/questions.erb
+++ b/quora/views/questions/questions.erb
@@ -8,8 +8,7 @@
 	</li>
   <br/>
 
-
-    <form  method="GET" action="/questions/<%= question.id %>">
+    <form  method="GET" action="/questions/<%= question.id %>/answers">
       <input type="submit" value="View">
     </form>
 
