--- a/quora/views/questions/edit.erb
+++ b/quora/views/questions/edit.erb
@@ -1,6 +1,6 @@
 
 
-<form  method="POST" action="/questions/<%=@id%>">
+<form  method="POST" action="/questions/<%=@question.id%>">
 
   <input type="hidden" name ="_method" value "PUT">
 
