User must be signed in to submit a new answer and can only delete his or her ownanswer. Plus fixed some bugs with question deletion feature.

--- a/quora/views/answers/answers.erb
+++ b/quora/views/answers/answers.erb
@@ -46,7 +46,7 @@
 
     <!-- answer a question -->
     <td>
-      <form  method="GET" action="/questions/<%=@id%>/answer">
+      <form  method="GET" action="/questions/<%=@question.id%>/answer">
         <input type="submit" value="Answer">
       </form> 
     </td>
