--- a/quora/views/home.erb
+++ b/quora/views/home.erb
@@ -11,7 +11,7 @@
 
   <h1>Quora Clone</h1>
   <% if @display_sign_in_error %>
-  <p>Please sign in in to post a new question.</p>
+  <p>Please sign in in to post a new question or submit an answer.</p>
   <% end %>
 
     <form  method="POST" action="/user/sign_in">
